--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 Python library for providing Cisco UCSM XMP API protocol support.
+
+WARNING: some tests affects to data, those tests are recommended to perform only on UCSPE. To turn
+them off you must set flag SIMULATOR from testucsmparams.py to False.
