lsInstantiateNNamedTemplate implementation added; function for manual cookie setting added.

--- a/README
+++ b/README
@@ -22,7 +22,7 @@ configFindDnsByClassId           V
 lsClone                                
 aaaLogin                         V
 configMoChangeEvent                
-lsInstantiateNNamedTemplate        
+lsInstantiateNNamedTemplate      V
 aaaLogout                        V
 configResolveChildren            V
 lsInstantiateNTemplate           V
